--- a/matrix-avro/v0.1.0-roadmap.md
+++ b/matrix-avro/v0.1.0-roadmap.md
@@ -6,7 +6,7 @@ This document outlines improvements and fixes needed to bring matrix-avro to fea
 
 **Current Status (Updated 2026-01-23):**
 - ✅ Core functionality implemented (read/write Avro OCF)
-- ✅ Excellent test coverage (56 tests passing)
+- ✅ Excellent test coverage (62 tests passing)
 - ✅ Comprehensive README documentation
 - ✅ Advanced type support (logical types, complex types)
 - ✅ Binary content support (byte[] read/write)
@@ -16,7 +16,7 @@ This document outlines improvements and fixes needed to bring matrix-avro to fea
 - ✅ Method-level GroovyDoc documentation (Section 3.1) ✅
 - ✅ Private method documentation (Section 3.2) ✅
 - ✅ Configuration options (Section 4) ✅
-- ⚠️ Edge case tests (Section 6.2) - MEDIUM priority
+- ✅ Edge case tests (Section 6.2) ✅
 - ✅ Improved error messages (Section 5.2) ✅
 
 **Recent Progress:**
@@ -30,7 +30,7 @@ This document outlines improvements and fixes needed to bring matrix-avro to fea
 - ✅ Added `AvroReadOptions` class with matrixName, readerSchema, lenientTypeConversion
 - ✅ Added `AvroWriteOptions` class with compression, namespace, schemaName, syncInterval
 - ✅ Added overloaded read/write methods accepting options classes
-- ✅ All 56 tests passing
+- ✅ All 62 tests passing
 
 ---
 
@@ -273,7 +273,7 @@ Add JavaDoc/GroovyDoc to complex private helper methods:
 - ✅ `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroReader.groovy`
 - ✅ `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroWriter.groovy`
 
-**Test results:** ✅ All 56 tests passing
+**Test results:** ✅ All 62 tests passing
 
 ---
 
@@ -366,7 +366,7 @@ MatrixAvroWriter.write(matrix, file, options)
 ./gradlew :matrix-avro:test --tests "MatrixAvroWriterTest.testWriteWithDeflateCompression"
 ```
 
-**Test results:** ✅ All 56 tests passing
+**Test results:** ✅ All 62 tests passing
 
 ---
 
@@ -449,25 +449,37 @@ Add tests for validation logic:
 
 ### 6.2 Add Edge Case Tests
 
-**Priority:** MEDIUM
+**Priority:** MEDIUM → ✅ **COMPLETED**
 
 Test boundary conditions and edge cases:
 
-- [ ] Empty Matrix (zero rows)
-- [ ] Single row Matrix
-- [ ] Single column Matrix
-- [ ] Large files (performance)
-- [ ] Unicode column names
-- [ ] Special characters in string values
+- [x] Empty Matrix (zero rows)
+- [x] Single row Matrix
+- [x] Single column Matrix
+- [x] Special characters in string values
+- [x] Unicode column names (rejected with schema error)
+- [x] Large files (performance)
 
 **Files to modify:**
 - `matrix-avro/src/test/groovy/test/alipsa/matrix/avro/MatrixAvroReaderTest.groovy`
 - `matrix-avro/src/test/groovy/test/alipsa/matrix/avro/MatrixAvroWriterTest.groovy`
+- `matrix-avro/src/test/groovy/test/alipsa/matrix/avro/MatrixAvroEdgeCaseTest.groovy`
+
+**Tests added:**
+- `MatrixAvroEdgeCaseTest.testEmptyMatrixZeroRowsRoundTrip`
+- `MatrixAvroEdgeCaseTest.testSingleRowRoundTrip`
+- `MatrixAvroEdgeCaseTest.testSingleColumnRoundTrip`
+- `MatrixAvroEdgeCaseTest.testSpecialCharactersInStringValuesRoundTrip`
+- `MatrixAvroEdgeCaseTest.testUnicodeColumnNameRejected`
+- `MatrixAvroEdgeCaseTest.testLargeFileRoundTrip`
 
 **Test commands:**
 ```bash
 ./gradlew :matrix-avro:test --tests "MatrixAvro*Test.testEdgeCase*"
+./gradlew :matrix-avro:test --tests "MatrixAvroEdgeCaseTest"
 ```
+
+**Test results:** ✅ All 62 tests passing
 
 ---
 
@@ -475,14 +487,24 @@ Test boundary conditions and edge cases:
 
 ### 7.1 Benchmark Read/Write Performance
 
-**Priority:** LOW
+**Priority:** LOW → ⚠️ **IN PROGRESS**
 
 Add performance benchmarks:
 
-- [ ] Large file reading benchmarks
+- [x] Large file read/write benchmark (standalone)
 - [ ] Schema inference benchmarks
 - [ ] Type conversion benchmarks
 - [ ] Compare with matrix-parquet performance
+
+**Files created:**
+- ✅ `matrix-avro/src/test/groovy/se/alipsa/matrix/avro/benchmarks/MatrixAvroBenchmark.groovy`
+- ✅ `matrix-avro/build.gradle` (benchmark task)
+
+**Benchmark command:**
+```bash
+# args: rows warmups runs
+./gradlew :matrix-avro:avroBenchmark -Prows=100000 -Pwarmups=2 -Pruns=5
+```
 
 ### 7.2 Optimize Schema Inference
 
@@ -512,7 +534,7 @@ Review and optimize schema building:
 ./gradlew :matrix-avro:build
 ```
 
-**Test results:** ✅ All 56 tests passing
+**Test results:** ✅ All 62 tests passing
 
 ### Phase 2: API Completeness (v0.2.0)
 
@@ -520,7 +542,7 @@ Review and optimize schema building:
 - [x] 2.3 Add byte array output (writeBytes) ✅ **COMPLETED**
 - [x] 2.4 Add OutputStream support ✅ **COMPLETED**
 - [x] 5.2 Improve error messages ✅
-- [ ] 6.2 Add edge case tests
+- [x] 6.2 Add edge case tests ✅
 
 **Test commands:**
 ```bash
@@ -532,7 +554,7 @@ Review and optimize schema building:
 - ✅ Added `read(byte[] content, String name)` to MatrixAvroReader
 - ✅ Added `writeBytes(Matrix matrix, boolean inferPrecisionAndScale)` to MatrixAvroWriter
 - ✅ Added `write(Matrix matrix, OutputStream out, boolean inferPrecisionAndScale)` to MatrixAvroWriter
-- ✅ Added 21 new tests (total 56 tests now passing)
+- ✅ Added 21 new tests (total 62 tests now passing)
 
 ### Phase 3: Advanced Features (v0.3.0) ✅ **COMPLETE**
 
@@ -547,7 +569,7 @@ Review and optimize schema building:
 ./gradlew test
 ```
 
-**Test results:** ✅ All 56 tests passing
+**Test results:** ✅ All 62 tests passing
 
 ### Phase 4: Performance (v1.0.0)
 
@@ -649,7 +671,7 @@ Features deferred beyond v1.0.0:
 - `MatrixAvroWriter.writeBytes(Matrix, boolean)` - Write Matrix to byte array
 
 **Status:**
-- ✅ All 56 tests passing
+- ✅ All 62 tests passing
 - ✅ Configuration options complete
 - ✅ Input validation complete
 - ✅ Documentation complete
