Performance and Optimization

--- a/matrix-avro/v0.1.0-roadmap.md
+++ b/matrix-avro/v0.1.0-roadmap.md
@@ -492,18 +492,25 @@ Test boundary conditions and edge cases:
 Add performance benchmarks:
 
 - [x] Large file read/write benchmark (standalone)
-- [ ] Schema inference benchmarks
-- [ ] Type conversion benchmarks
-- [ ] Compare with matrix-parquet performance
+- [x] Schema inference benchmarks
+- [x] Type conversion benchmarks
+- [x] Compare with matrix-parquet performance
 
 **Files created:**
 - ✅ `matrix-avro/src/test/groovy/se/alipsa/matrix/avro/benchmarks/MatrixAvroBenchmark.groovy`
+- ✅ `matrix-avro/src/test/groovy/se/alipsa/matrix/avro/benchmarks/MatrixAvroSchemaBenchmark.groovy`
+- ✅ `matrix-avro/src/test/groovy/se/alipsa/matrix/avro/benchmarks/MatrixAvroConversionBenchmark.groovy`
+- ✅ `matrix-avro/src/test/groovy/se/alipsa/matrix/avro/benchmarks/MatrixAvroParquetBenchmark.groovy`
+- ✅ `matrix-avro/src/test/groovy/se/alipsa/matrix/avro/benchmarks/BenchmarkUtils.groovy`
 - ✅ `matrix-avro/build.gradle` (benchmark task)
 
 **Benchmark command:**
 ```bash
 # args: rows warmups runs
 ./gradlew :matrix-avro:avroBenchmark -Prows=100000 -Pwarmups=2 -Pruns=5
+./gradlew :matrix-avro:avroSchemaBenchmark -Prows=100000 -Pwarmups=2 -Pruns=5
+./gradlew :matrix-avro:avroConversionBenchmark -Prows=50000 -Pwarmups=2 -Pruns=5
+./gradlew :matrix-avro:avroParquetBenchmark -Prows=100000 -Pwarmups=2 -Pruns=5
 ```
 
 ### 7.2 Optimize Schema Inference
@@ -512,9 +519,9 @@ Add performance benchmarks:
 
 Review and optimize schema building:
 
-- [ ] Cache inferred schemas
-- [ ] Optimize BigDecimal precision detection
-- [ ] Optimize complex type detection
+- [x] Cache inferred schemas
+- [x] Optimize BigDecimal precision detection
+- [x] Optimize complex type detection
 
 ---
 
