--- a/matrix-avro/v0.1.0-roadmap.md
+++ b/matrix-avro/v0.1.0-roadmap.md
@@ -6,7 +6,7 @@ This document outlines improvements and fixes needed to bring matrix-avro to fea
 
 **Current Status (Updated 2026-01-23):**
 - ✅ Core functionality implemented (read/write Avro OCF)
-- ✅ Excellent test coverage (62 tests passing)
+- ✅ Excellent test coverage (65 tests passing)
 - ✅ Comprehensive README documentation
 - ✅ Advanced type support (logical types, complex types)
 - ✅ Binary content support (byte[] read/write)
@@ -30,7 +30,7 @@ This document outlines improvements and fixes needed to bring matrix-avro to fea
 - ✅ Added `AvroReadOptions` class with matrixName, readerSchema, lenientTypeConversion
 - ✅ Added `AvroWriteOptions` class with compression, namespace, schemaName, syncInterval
 - ✅ Added overloaded read/write methods accepting options classes
-- ✅ All 62 tests passing
+- ✅ All 65 tests passing
 
 ---
 
@@ -273,7 +273,7 @@ Add JavaDoc/GroovyDoc to complex private helper methods:
 - ✅ `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroReader.groovy`
 - ✅ `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroWriter.groovy`
 
-**Test results:** ✅ All 62 tests passing
+**Test results:** ✅ All 65 tests passing
 
 ---
 
@@ -366,7 +366,7 @@ MatrixAvroWriter.write(matrix, file, options)
 ./gradlew :matrix-avro:test --tests "MatrixAvroWriterTest.testWriteWithDeflateCompression"
 ```
 
-**Test results:** ✅ All 62 tests passing
+**Test results:** ✅ All 65 tests passing
 
 ---
 
@@ -432,8 +432,8 @@ Add tests for validation logic:
 - [x] Test null parameter handling
 - [x] Test file existence validation
 - [x] Test directory vs file validation
-- [ ] Test empty file handling (deferred to edge case tests)
-- [ ] Test corrupt file handling (deferred to edge case tests)
+- [x] Test empty file handling
+- [x] Test corrupt file handling
 
 **Files modified:**
 - ✅ `matrix-avro/src/test/groovy/test/alipsa/matrix/avro/MatrixAvroReaderTest.groovy`
@@ -479,7 +479,7 @@ Test boundary conditions and edge cases:
 ./gradlew :matrix-avro:test --tests "MatrixAvroEdgeCaseTest"
 ```
 
-**Test results:** ✅ All 62 tests passing
+**Test results:** ✅ All 65 tests passing
 
 ---
 
@@ -487,7 +487,7 @@ Test boundary conditions and edge cases:
 
 ### 7.1 Benchmark Read/Write Performance
 
-**Priority:** LOW → ⚠️ **IN PROGRESS**
+**Priority:** LOW → ✅ **COMPLETED**
 
 Add performance benchmarks:
 
@@ -541,7 +541,7 @@ Review and optimize schema building:
 ./gradlew :matrix-avro:build
 ```
 
-**Test results:** ✅ All 62 tests passing
+**Test results:** ✅ All 65 tests passing
 
 ### Phase 2: API Completeness (v0.2.0)
 
@@ -561,7 +561,7 @@ Review and optimize schema building:
 - ✅ Added `read(byte[] content, String name)` to MatrixAvroReader
 - ✅ Added `writeBytes(Matrix matrix, boolean inferPrecisionAndScale)` to MatrixAvroWriter
 - ✅ Added `write(Matrix matrix, OutputStream out, boolean inferPrecisionAndScale)` to MatrixAvroWriter
-- ✅ Added 21 new tests (total 62 tests now passing)
+- ✅ Added 21 new tests (total 65 tests now passing)
 
 ### Phase 3: Advanced Features (v0.3.0) ✅ **COMPLETE**
 
@@ -576,13 +576,13 @@ Review and optimize schema building:
 ./gradlew test
 ```
 
-**Test results:** ✅ All 62 tests passing
+**Test results:** ✅ All 65 tests passing
 
 ### Phase 4: Performance (v1.0.0)
 
-- [ ] 7.1 Benchmark read/write performance
-- [ ] 7.2 Optimize schema inference
-- [ ] Final review and polish
+- [x] 7.1 Benchmark read/write performance
+- [x] 7.2 Optimize schema inference
+- [x] Final review and polish
 
 **Test commands:**
 ```bash
@@ -678,7 +678,7 @@ Features deferred beyond v1.0.0:
 - `MatrixAvroWriter.writeBytes(Matrix, boolean)` - Write Matrix to byte array
 
 **Status:**
-- ✅ All 62 tests passing
+- ✅ All 65 tests passing
 - ✅ Configuration options complete
 - ✅ Input validation complete
 - ✅ Documentation complete
