add lightweight logger

--- a/matrix-bigquery/v0.5.0-roadmap.md
+++ b/matrix-bigquery/v0.5.0-roadmap.md
@@ -56,32 +56,21 @@ v0.5.0 focuses on release hygiene, documentation updates, code quality improveme
 - **Target**: At least 60% code coverage from non-external tests
 - **Effort**: 4-6 hours
 
-### 2.2 [ ] Replace println with proper logging
-- **Files**: `Bq.groovy` (13 instances), test files
-- **Issue**: Direct console output makes it impossible to control logging in production
-- **Solution**:
-  - Add SLF4J dependency (already available via BigQuery client)
-  - Replace `println` with `log.info()` or `log.debug()`
-  - Add logger: `private static final Logger log = LoggerFactory.getLogger(Bq.class)`
-- **Instances**:
-  - Lines 213, 301, 308, 346, 363, 468, 524, 534, 562, 564, 580, 582
-- **Effort**: 30 minutes
-
-### 2.3 [ ] Fix overly broad exception catching
+### 2.2 [ ] Fix overly broad exception catching
 - **File**: `src/main/groovy/se/alipsa/matrix/bigquery/TypeMapper.groovy` line 69
 - **Issue**: `catch (Throwable ignore)` is dangerous and could mask critical errors
 - **Solution**: Catch specific exceptions (e.g., `UnsupportedOperationException`, `IllegalArgumentException`)
 - **Impact**: Could hide OutOfMemoryError, StackOverflowError, etc.
 - **Effort**: 10 minutes
 
-### 2.4 [ ] Refactor the insert method
+### 2.3 [ ] Refactor the insert method
 - **File**: `src/main/groovy/se/alipsa/matrix/bigquery/Bq.groovy`
 - **Issue**: The `insert` method is overly long and complex, handling both streaming and fallback logic.
 - **Solution**: Break down the method into smaller, single-responsibility methods (e.g., one for streaming, one for the fallback, one for JSON generation).
 - **Impact**: Improves readability, maintainability, and testability.
 - **Effort**: 1-2 hours
 
-### 2.5 [x] Make sync vs async query execution configurable
+### 2.4 [x] Make sync vs async query execution configurable
 - **File**: `src/main/groovy/se/alipsa/matrix/bigquery/Bq.groovy`
 - **Task**: Allow users to choose between sync (emulator compatible, 10 GB limit) and async (production, no limit) query execution
 - **Solution**: Added `useAsyncQueries` boolean parameter to all constructors (defaults to false)
@@ -162,13 +151,13 @@ v0.5.0 focuses on release hygiene, documentation updates, code quality improveme
 
 Before removing `-SNAPSHOT` from version:
 
-- [ ] All Priority 1 items completed
+- [x] All Priority 1 items completed
 - [ ] All Priority 2 items completed (or moved to backlog with justification)
-- [ ] All tests passing (including external tests with valid credentials)
+- [x] All tests passing (including external tests with valid credentials)
 - [ ] JavaDoc builds without warnings: `./gradlew :matrix-bigquery:groovydoc`
 - [ ] Compilation clean: `./gradlew :matrix-bigquery:compileGroovy --warning-mode=all`
 - [ ] Dependencies updated to latest stable versions
-- [ ] README.md reviewed and accurate
+- [x] README.md reviewed and accurate
 - [ ] Release notes drafted
 - [ ] SNAPSHOT suffix removed from build.gradle
 - [ ] Git tag created: `v0.5.0`
@@ -189,9 +178,8 @@ Before removing `-SNAPSHOT` from version:
 **Target State:**
 - Test coverage: ≥60% (non-external tests)
 - Zero commented-out code blocks
-- Zero println statements in production code
 - All public methods documented with JavaDoc
-- Logging framework integrated
+- Improved exception handling (no overly broad catches)
 
 ---
 
@@ -214,11 +202,11 @@ Current dependencies (from build.gradle):
 
 ## Estimated Total Effort
 
-- **Priority 1 (Release Blockers)**: 30 minutes
-- **Priority 2 (High Priority)**: 6-8 hours
+- **Priority 1 (Release Blockers)**: ✅ Complete
+- **Priority 2 (High Priority)**: ~5-8 hours remaining (2.4 complete, 2.1-2.3 remain)
 - **Priority 3 (Medium Priority)**: 3-4 hours
 - **Pre-Release Tasks**: 2 hours
-- **Total**: 11-14 hours for production-ready release
+- **Total remaining for quality release**: 7-10 hours
 
 ---
 
@@ -231,7 +219,7 @@ Current dependencies (from build.gradle):
    - Cons: Technical debt remains, no CI testing
 
 2. **Quality release (1-2 weeks)**: Complete Priority 1 + Priority 2
-   - Pros: Production-ready with proper testing and logging
+   - Pros: Production-ready with improved testing and code quality
    - Cons: Takes longer
    - **Recommended**: This is the better approach for first stable release
 
