Fix overly broad exception catching

--- a/matrix-bigquery/v0.5.0-roadmap.md
+++ b/matrix-bigquery/v0.5.0-roadmap.md
@@ -57,12 +57,14 @@ v0.5.0 focuses on release hygiene, documentation updates, code quality improveme
 - **Status**: ✅ Complete - 59 unit tests added, all passing, can run in CI without external dependencies
 - **Effort**: 4 hours
 
-### 2.2 [ ] Fix overly broad exception catching
+### 2.2 [x] Fix overly broad exception catching
 - **File**: `src/main/groovy/se/alipsa/matrix/bigquery/TypeMapper.groovy` line 69
 - **Issue**: `catch (Throwable ignore)` is dangerous and could mask critical errors
 - **Solution**: Catch specific exceptions (e.g., `UnsupportedOperationException`, `IllegalArgumentException`)
 - **Impact**: Could hide OutOfMemoryError, StackOverflowError, etc.
 - **Effort**: 10 minutes
+- **Status**: ✅ Fixed - Changed to catch `IllegalStateException | UnsupportedOperationException | ClassCastException` with documentation explaining each exception type
+- **Test command**: `./gradlew :matrix-bigquery:test` (60 tests pass)
 
 ### 2.3 [ ] Refactor the insert method
 - **File**: `src/main/groovy/se/alipsa/matrix/bigquery/Bq.groovy`
