Refactor the insert method

--- a/matrix-bigquery/v0.5.0-roadmap.md
+++ b/matrix-bigquery/v0.5.0-roadmap.md
@@ -66,12 +66,25 @@ v0.5.0 focuses on release hygiene, documentation updates, code quality improveme
 - **Status**: ✅ Fixed - Changed to catch `IllegalStateException | UnsupportedOperationException | ClassCastException` with documentation explaining each exception type
 - **Test command**: `./gradlew :matrix-bigquery:test` (60 tests pass)
 
-### 2.3 [ ] Refactor the insert method
+### 2.3 [x] Refactor the insert method
 - **File**: `src/main/groovy/se/alipsa/matrix/bigquery/Bq.groovy`
 - **Issue**: The `insert` method is overly long and complex, handling both streaming and fallback logic.
 - **Solution**: Break down the method into smaller, single-responsibility methods (e.g., one for streaming, one for the fallback, one for JSON generation).
 - **Impact**: Improves readability, maintainability, and testability.
 - **Effort**: 1-2 hours
+- **Status**: ✅ Complete - Refactored into 10 smaller methods with clear responsibilities:
+  - `insert()` - Main entry point, orchestrates flow
+  - `isConnectionError()` - Checks if fallback is needed
+  - `insertViaWriteChannel()` - Handles JSON streaming insert
+  - `writeRowAsJson()` - Writes a single row to JSON
+  - `writeJsonValue()` - Writes a single value with type handling
+  - `waitForLoadJobAndGetStats()` - Waits for job and returns stats
+  - `buildErrorDetails()` - Formats BigQuery errors
+  - `insertViaInsertAll()` - Fallback InsertAll method
+  - `convertRowForInsertAll()` - Converts row for InsertAll
+  - `buildInsertAllErrorDetails()` - Formats InsertAll errors
+  - `createPlaceholderLoadStatistics()` - Creates placeholder stats
+- **Test command**: `./gradlew :matrix-bigquery:test` (60 tests pass)
 
 ### 2.4 [x] Make sync vs async query execution configurable
 - **File**: `src/main/groovy/se/alipsa/matrix/bigquery/Bq.groovy`
