Add comprehensive JavaDoc documentation

--- a/matrix-bigquery/v0.5.0-roadmap.md
+++ b/matrix-bigquery/v0.5.0-roadmap.md
@@ -101,7 +101,7 @@ v0.5.0 focuses on release hygiene, documentation updates, code quality improveme
 
 ## Priority 3: Medium Priority (Nice to Have)
 
-### 3.1 [ ] Add comprehensive JavaDoc documentation
+### 3.1 [x] Add comprehensive JavaDoc documentation
 - **Files**: All public methods in Bq.groovy, TypeMapper.groovy
 - **Missing Documentation**:
   - `insert()` method fallback strategy (streaming → InsertAll)
@@ -110,6 +110,16 @@ v0.5.0 focuses on release hygiene, documentation updates, code quality improveme
   - Thread-safety guarantees (or lack thereof)
   - `sanitizeString()` Unicode control character removal rationale
 - **Effort**: 2 hours
+- **Status**: ✅ Complete - Added comprehensive JavaDoc including:
+  - Class-level documentation with thread-safety warnings, usage examples, and API overview
+  - All constructor documentation with parameter descriptions
+  - All public method documentation with @param, @return, @throws, and @see tags
+  - Detailed type conversion tables in TypeMapper and Bq
+  - Backoff strategy documentation for waitForTable()
+  - Unicode control character explanation in sanitizeString()
+  - Unsupported BigQuery types documented with future implementation notes
+- **Test command**: `./gradlew :matrix-bigquery:test` (60 tests pass)
+- **JavaDoc command**: `./gradlew :matrix-bigquery:groovydoc` (builds without warnings)
 
 ### 3.2 [ ] Reduce usage of 'def' keyword
 - **File**: `src/main/groovy/se/alipsa/matrix/bigquery/Bq.groovy`
