Make waitForTable timeout configurable

--- a/matrix-bigquery/v0.5.0-roadmap.md
+++ b/matrix-bigquery/v0.5.0-roadmap.md
@@ -121,12 +121,21 @@ v0.5.0 focuses on release hygiene, documentation updates, code quality improveme
 - **Test command**: `./gradlew :matrix-bigquery:test` (60 tests pass)
 - **JavaDoc command**: `./gradlew :matrix-bigquery:groovydoc` (builds without warnings)
 
-### 3.2 [ ] Reduce usage of 'def' keyword
+### 3.2 [x] Reduce usage of 'def' keyword
 - **File**: `src/main/groovy/se/alipsa/matrix/bigquery/Bq.groovy`
 - **Issue**: Class is `@CompileStatic` but uses `def` extensively (13+ instances)
 - **Impact**: Defeats static compilation benefits, reduces type safety
 - **Lines**: 189, 229, 239, 286-288, 338-339, 527, 550, 604
 - **Effort**: 30 minutes
+- **Status**: ✅ Complete - All `def` usages replaced with explicit types during refactoring (task 2.3 and 3.1):
+  - `def builder` → `DatasetInfo.Builder builder`
+  - `def fields` → `List<Field> fields`
+  - `def row` → `List<Object> row`
+  - `def t` → `Table t`
+  - `def table` → `Table table`
+  - All loop variables now have explicit types (Row, FieldValue, etc.)
+- **Verification**: `grep -r '\bdef\b' src/main/groovy/` returns no matches
+- **Test command**: `./gradlew :matrix-bigquery:test` (60 tests pass)
 
 ### 3.3 [x] Fix typo in comment
 - **File**: `Bq.groovy` line 34
@@ -134,18 +143,37 @@ v0.5.0 focuses on release hygiene, documentation updates, code quality improveme
 - **Effort**: 10 seconds
 - **Status**: ✅ Fixed - Corrected typo
 
-### 3.4 [ ] Document unsupported BigQuery types
+### 3.4 [x] Document unsupported BigQuery types
 - **File**: `TypeMapper.groovy`
 - **Issue**: Commented-out types (GEOGRAPHY, INTERVAL, JSON, RANGE, RECORD) lack explanation
 - **Solution**: Add JavaDoc section explaining which types are not yet supported and why
 - **Effort**: 15 minutes
+- **Status**: ✅ Complete (addressed during task 3.1) - Documentation added in two places:
+  - Class-level JavaDoc "Unsupported BigQuery Types" section (lines 45-53)
+  - Inline comments in `convertType()` and `convert()` methods
+  - Each type documented with reason and potential future mapping:
+    - GEOGRAPHY → GeoJSON parsing required
+    - INTERVAL → java.time.Duration
+    - JSON → Map or JsonNode
+    - RANGE → custom Range class
+    - RECORD → Map<String, Object>
+- **Test command**: `./gradlew :matrix-bigquery:test` (60 tests pass)
 
-### 3.5 [ ] Make waitForTable timeout configurable
+### 3.5 [x] Make waitForTable timeout configurable
 - **File**: `src/main/groovy/se/alipsa/matrix/bigquery/Bq.groovy`
 - **Issue**: The `waitForTable` method has a hardcoded timeout of 60 seconds.
 - **Solution**: Allow the timeout to be configured, e.g., by passing it as a parameter to the method or to the `Bq` constructor.
 - **Impact**: Provides more flexibility for users who may need shorter or longer timeouts.
 - **Effort**: 20 minutes
+- **Status**: ✅ Complete - Added configurable timeout via getter/setter:
+  - Added `DEFAULT_WAIT_FOR_TABLE_TIMEOUT_MS` constant (60 seconds)
+  - Added `waitForTableTimeoutMs` instance field
+  - Added `getWaitForTableTimeoutMs()` and `setWaitForTableTimeoutMs(long)` methods
+  - Updated `saveToBigQuery()` to use the configurable timeout
+  - Added validation (timeout must be positive)
+  - Updated class-level JavaDoc with "Configurable Options" section
+  - Example usage: `bq.setWaitForTableTimeoutMs(120_000L)` for 2-minute timeout
+- **Test command**: `./gradlew :matrix-bigquery:test` (62 tests pass)
 
 ---
 
