--- a/matrix-bigquery/v0.5.0-roadmap.md
+++ b/matrix-bigquery/v0.5.0-roadmap.md
@@ -206,11 +206,11 @@ v0.5.0 focuses on release hygiene, documentation updates, code quality improveme
 Before removing `-SNAPSHOT` from version:
 
 - [x] All Priority 1 items completed
-- [ ] All Priority 2 items completed (or moved to backlog with justification)
-- [x] All tests passing (including external tests with valid credentials)
-- [ ] JavaDoc builds without warnings: `./gradlew :matrix-bigquery:groovydoc`
-- [ ] Compilation clean: `./gradlew :matrix-bigquery:compileGroovy --warning-mode=all`
-- [ ] Dependencies updated to latest stable versions
+- [x] All Priority 2 items completed
+- [x] All tests passing (62 unit tests, external tests with valid credentials)
+- [x] JavaDoc builds without warnings: `./gradlew :matrix-bigquery:groovydoc`
+- [x] Compilation clean: `./gradlew :matrix-bigquery:compileGroovy --warning-mode=all`
+- [x] Dependencies updated to latest stable versions (2026-01-27)
 - [x] README.md reviewed and accurate
 - [ ] Release notes drafted
 - [ ] SNAPSHOT suffix removed from build.gradle
@@ -239,18 +239,22 @@ Before removing `-SNAPSHOT` from version:
 
 ## Dependencies Review
 
-Current dependencies (from build.gradle):
+Updated dependencies (as of 2026-01-27):
 
-| Dependency                   | Version | Status   | Notes                |
-|------------------------------|---------|----------|----------------------|
-| google-cloud-bigquery        | 2.56.0  | ⚠️ Check | Verify latest stable |
-| google-cloud-resourcemanager | 1.82.0  | ⚠️ Check | Verify latest stable |
-| google-auth-library-bom      | 1.41.0  | ⚠️ Check | Verify latest stable |
-| google-cloud-bigquerystorage | 3.18.0  | ⚠️ Check | Verify latest stable |
-| progressbar                  | 0.10.1  | ✅ Latest | Released 2024-01     |
-| testcontainers               | 1.21.3  | ⚠️ Check | Verify latest stable |
+| Dependency                   | Previous | Current | Status |
+|------------------------------|----------|---------|--------|
+| google-cloud-bigquery        | 2.56.0   | 2.58.0  | ✅ Updated |
+| google-cloud-resourcemanager | 1.82.0   | 1.84.0  | ✅ Updated |
+| google-auth-library-bom      | 1.41.0   | 1.42.1  | ✅ Updated |
+| google-cloud-bigquerystorage | 3.18.0   | 3.20.0  | ✅ Updated |
+| progressbar                  | 0.10.1   | 0.10.2  | ✅ Updated |
+| testcontainers (gcloud)      | 1.21.3   | 1.21.4  | ✅ Updated |
+| testcontainers (junit-jupiter) | 1.21.3 | 1.21.4  | ✅ Updated |
 
-**Action**: Update all Google Cloud libraries to latest stable versions before release.
+**Status**: All dependencies updated to latest stable versions.
+**Test results**: All 62 unit tests passing.
+**Compilation**: Clean with no warnings (`./gradlew :matrix-bigquery:compileGroovy --warning-mode=all`).
+**GroovyDoc**: Builds successfully without warnings.
 
 ---
 
