section 2 of the smile roadmap complete

--- a/matrix-smile/v0.1.0-roadmap.md
+++ b/matrix-smile/v0.1.0-roadmap.md
@@ -68,9 +68,9 @@ switch (method.toLowerCase()) {
 **Note:** The actual dependency is Groovy 5.0.4 (see dependencies.gradle), but saying "5.0+" allows for flexibility with future patch releases.
 
 **Tasks:**
-- 2.1 [ ] Update README line 8 to specify "Groovy 5.0+" instead of "Groovy 4.x"
-- 2.2 [ ] Verify the change matches actual Groovy version in dependencies.gradle (currently 5.0.4)
-- 2.3 [ ] Consider adding a note that arrow-style switch expressions require Groovy 5.0+
+- 2.1 [x] Update README line 7 to specify "Groovy 5.0+" instead of "Groovy 4.x"
+- 2.2 [x] Verify the change matches actual Groovy version in dependencies.gradle (currently 5.0.4) - **VERIFIED**
+- 2.3 [x] Consider adding a note that arrow-style switch expressions require Groovy 5.0+ - **ADDED to README**
 
 ---
 
