section 3 of the smile roadmap complete

--- a/matrix-smile/v0.1.0-roadmap.md
+++ b/matrix-smile/v0.1.0-roadmap.md
@@ -98,9 +98,9 @@ Or use a more neutral example:
 ```
 
 **Tasks:**
-- 3.1 [ ] Update documentation example at line 305 to remove println suggestion
-- 3.2 [ ] Review other doc examples in Gsmile.groovy for println usage
-- 3.3 [ ] Generate groovydoc to verify example appears correctly: `./gradlew :matrix-smile:groovydoc`
+- 3.1 [x] Update documentation example at line 305 to remove println suggestion
+- 3.2 [x] Review other doc examples in Gsmile.groovy for println usage - **No other println found**
+- 3.3 [x] Generate groovydoc to verify example appears correctly: `./gradlew :matrix-smile:groovydoc` - **BUILD SUCCESSFUL**
 
 ---
 
