section 4 of the smile roadmap complete

--- a/matrix-smile/v0.1.0-roadmap.md
+++ b/matrix-smile/v0.1.0-roadmap.md
@@ -122,9 +122,9 @@ moduleVersion=0.1.0
 ```
 
 **Tasks:**
-- 4.1 [ ] Update moduleVersion to 0.1.0 in ExtensionModule file
-- 4.2 [ ] Rebuild and verify extension loads: `./gradlew :matrix-smile:build`
-- 4.3 [ ] Run extension tests: `./gradlew :matrix-smile:test --tests "GsmileTest"`
+- 4.1 [x] Update moduleVersion to 0.1.0 in ExtensionModule file
+- 4.2 [x] Rebuild and verify extension loads: `./gradlew :matrix-smile:build` - **BUILD SUCCESSFUL**
+- 4.3 [x] Run extension tests: `./gradlew :matrix-smile:test --tests "GsmileTest"` - **SUCCESS (24 tests passed)**
 
 ---
 
