section 5 of the smile roadmap complete

--- a/matrix-smile/v0.1.0-roadmap.md
+++ b/matrix-smile/v0.1.0-roadmap.md
@@ -161,10 +161,11 @@ DataFrame transform(DataFrame df) {
 ```
 
 **Tasks:**
-- 5.1 [ ] Implement proper StandardScaler.transform() using stored means and stds
-- 5.2 [ ] Add test case for separate fit() and transform() workflow in SmileFeaturesTest
-- 5.3 [ ] Update GroovyDoc to clarify transform() requires prior fit() call
-- 5.4 [ ] Run tests: `./gradlew :matrix-smile:test --tests "SmileFeaturesTest.testStandardScaler*"`
+- 5.1 [x] Implement proper StandardScaler.transform() using stored means and stds
+- 5.2 [x] Add test case for separate fit() and transform() workflow in SmileFeaturesTest - **testStandardScalerSeparateFitAndTransform()**
+- 5.3 [x] Update GroovyDoc to clarify transform() requires prior fit() call
+- 5.4 [x] Run tests: `./gradlew :matrix-smile:test --tests "SmileFeaturesTest.testStandardScaler*"` - **SUCCESS (3 tests passed)**
+- 5.5 [x] Run full test suite: `./gradlew :matrix-smile:test --tests "SmileFeaturesTest"` - **SUCCESS (32 tests passed)**
 
 ---
 
