section 6 of the smile roadmap complete

--- a/matrix-smile/v0.1.0-roadmap.md
+++ b/matrix-smile/v0.1.0-roadmap.md
@@ -192,10 +192,20 @@ double x = value as double
 ```
 
 **Tasks:**
-- 6.1 [ ] Search all files for `.doubleValue()` pattern
-- 6.2 [ ] Replace with `as double` where type casting is clear
-- 6.3 [ ] Keep .doubleValue() only where interfacing with Smile's primitive APIs requires it
-- 6.4 [ ] Run full test suite: `./gradlew :matrix-smile:test`
+- 6.1 [x] Search all files for `.doubleValue()` pattern - **19 occurrences found**
+- 6.2 [x] Replace with `as double` where type casting is clear - **All 19 replaced**
+- 6.3 [x] Keep .doubleValue() only where interfacing with Smile's primitive APIs requires it - **Decision: Replace all for consistency**
+- 6.4 [x] Run full test suite: `./gradlew :matrix-smile:test` - **SUCCESS (274 tests passed)**
+
+**Files updated:**
+- SmileData.groovy: 1 occurrence
+- SmileUtil.groovy: 4 occurrences
+- SmileFeatures.groovy: 9 occurrences
+- SmileStats.groovy: 1 occurrence
+- DataframeConverter.groovy: 1 occurrence
+- SmileRegression.groovy: 1 occurrence
+- SmileCluster.groovy: 1 occurrence
+- SmileDimensionality.groovy: 1 occurrence
 
 ---
 
