section 7 of the smile roadmap complete

--- a/matrix-smile/v0.1.0-roadmap.md
+++ b/matrix-smile/v0.1.0-roadmap.md
@@ -238,11 +238,21 @@ value.log()
 ```
 
 **Tasks:**
-- 7.1 [ ] Audit all Math.* calls and categorize: performance-critical vs. replaceable
-- 7.2 [ ] Replace Math calls with NumberExtension in SmileFeatures transformations
-- 7.3 [ ] Keep Math calls in SmileClassifier, SmileRegression, SmileCluster (ML algorithms)
-- 7.4 [ ] Run full test suite: `./gradlew :matrix-smile:test`
-- 7.5 [ ] Benchmark if performance impact is measurable
+- 7.1 [x] Audit all Math.* calls and categorize: performance-critical vs. replaceable - **24 occurrences found**
+- 7.2 [x] Replace Math calls with NumberExtension in SmileFeatures transformations - **2 replacements made**
+- 7.3 [x] Keep Math calls in SmileClassifier, SmileRegression, SmileCluster (ML algorithms) - **Kept for performance**
+- 7.4 [x] Run full test suite: `./gradlew :matrix-smile:test` - **SUCCESS (274 tests passed)**
+- 7.5 [x] Benchmark if performance impact is measurable - **N/A - only 2 user-facing transformations changed**
+
+**Replacements Made:**
+1. `SmileFeatures.sqrtTransform()`: `Math.sqrt(v)` → `v.sqrt()` (line 222)
+2. `SmileFeatures.powerTransform()`: `Math.pow(v, power)` → `v ** power` (line 236)
+
+**Math Calls Kept (22 occurrences) - Justified:**
+- **Performance-critical ML algorithms (8):** RMSE, MAE, silhouette coefficient, variance calculations
+- **No NumberExtension equivalent (1):** Math.log1p (would need `(v+1).log()` which is less clear)
+- **Primitives with @CompileStatic (2):** floor/ceil on primitive double (extension methods don't work)
+- **Clear intent for size/index operations (11):** Math.max/min/round for clamping and rounding
 
 ---
 
